# camport3_soc

./: README  README.md  build.sh  build.sh~
Include/: TYApi.h
Sample/: CMakeLists.txt  CMakeLists.txt~
Sample/RawFetchFrame/: main.cpp
Sample/common/: MatViewer.hpp  Utils.hpp  common.hpp
ThirdPartyLib/Opencv-3.4/include/opencv2/: cvconfig.h
ThirdPartyLib/Opencv-3.4/lib/: libopencv_calib3d.so.3.4.0  libopencv_core.so.3.4.0  libopencv_dnn.so.3.4.0  libopencv_features2d.so.3.4.0  libopencv_flann.so.3.4.0  libopencv_highgui.so.3.4.0  libopencv_imgcodecs.so.3.4.0  libopencv_imgproc.so.3.4.0  libopencv_ml.so.3.4.0  libopencv_objdetect.so.3.4.0  libopencv_photo.so.3.4.0  libopencv_shape.so.3.4.0  libopencv_stitching.so.3.4.0  libopencv_superres.so.3.4.0  libopencv_video.so.3.4.0  libopencv_videoio.so.3.4.0  libopencv_videostab.so.3.4.0  libopencv_world.so.3.4
ThirdPartyLib/Opencv-3.4/lib/pkgconfig/: opencv.pc
ThirdPartyLib/Opencv-3.4/share/OpenCV/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
include/: TYApi.h
sample/: CMakeLists.txt
sample/RawFetchFrame/: main.cpp
sample/common/: MatViewer.cpp  MatViewer.hpp  PointCloudViewer.cpp  PointCloudViewer.hpp  Utils.hpp  common.hpp
sample/common/cloud_viewer/: cloud_viewer.cpp  cloud_viewer.hpp
toolchain/gcc-linaro-arm-linux-gnueabihf-4.7-2013.04-20130415_linux/: toolchain.cmake  toolchain.cmake~
toolchain/gcc-linaro-arm-linux-gnueabihf-4.7-2013.04-20130415_linux/arm-linux-gnueabihf/include/: libyasm-stdint.h
(+34 files in other folders)
